Gap for the filters, hamburger fixing, text fixes

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ header, footer {
     /* Close button */
     .close-btn, .open-btn {
         position: fixed;
+        -webkit-transform: translateZ(0);
         top: 1rem;
         right: 1rem;
         font-size: 2rem;
@@ -619,6 +620,10 @@ header, footer {
 
             .body-category main {
                 margin-top: 25vw;
+            }
+
+            .filters {
+                gap: .8rem;
             }
 
             .filters .filter-btn, .main-nav .overlay-menu a, html p, html a, html button {
